stacks/tanoshi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tanoshi
  namespace: tanoshi
  labels:
    name: tanoshi
spec:
  selector:
    app: tanoshi
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
