stacks/tanoshi/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tanoshi
  namespace: tanoshi
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`your.domain.com`)
    middlewares:
    - name: chain-authelia
      namespace: default
    services:
    - name: tanoshi
      namespace: tanoshi
      port: 80
